# RANN_Refactor

./: .gitignore  .gitmodules  README.md
refac_calibration/: CMakeLists.txt  Makefile  calibration.cpp  nn_calibration.cpp  pair_spin_rann.h  rann_activation.h  rann_activation_capped.h  rann_activation_cappedsharp.h  rann_activation_cappedshift.h  rann_activation_linear.h  rann_activation_sharpcapped.h  rann_activation_sig_i.h  rann_activation_slowcapped.h  rann_activation_tanh.h  rann_activation_tanhtwist.h  rann_activation_ttanh.h  rann_activation_zero.h  rann_create_styles.cpp  rann_fingerprint.cpp  rann_fingerprint.h  rann_fingerprint_bond.cpp  rann_fingerprint_bond.h  rann_fingerprint_bondscreened.cpp  rann_fingerprint_radial.h  rann_fingerprint_radialscreened.cpp  rann_state_covalent.h  rann_state_eam_ref_dim.h  rann_state_eam_ref_l12.h  rann_state_eamscreenedsingle.h  rann_state_eshift.h  rann_state_repulse.h  rann_state_rose.cpp  rann_state_spin_jscreened.cpp  rann_state_spinbiquadratic.cpp  rann_state_zbl.h  utils.h
refac_calibration/activation/: rann_activation_cappedsharp.h  rann_activation_cappedshift.h  rann_activation_sharpcapped.h  rann_activation_slowcapped.h
refac_calibration/activation/lib/: rann_activation_linear.h  rann_activation_sig_i.h  rann_activation_tanh.h  rann_activation_ttanh.h
refac_calibration/examples/: AlSmall.nn  Al_fcc_ev.dump  Al_sc_Elastic.dump  Alnew1.nn  potential_output1.nn
refac_calibration/examples/DEBUG/: potential_output1.nn.debug1
refac_calibration/fingerprint/: rann_fingerprint.cpp  rann_fingerprint_bondscreenedspin.cpp  rann_fingerprint_bondspin.cpp  rann_fingerprint_radialscreened.h  rann_fingerprint_radialscreenedspinn.cpp  rann_fingerprint_radialspin.h
refac_calibration/fingerprint/lib/: rann_fingerprint_bondscreened.h  rann_fingerprint_bondscreenedspin.h  rann_fingerprint_bondspin.h  rann_fingerprint_radialscreenedspin.h  rann_fingerprint_radialscreenedspinn.h  rann_fingerprint_temperature.h  rann_fingerprint_torsion.h
refac_calibration/fingerprint/src/: rann_fingerprint_bond.cpp  rann_fingerprint_bondscreened.cpp  rann_fingerprint_bondscreenedspin.cpp  rann_fingerprint_bondspin.cpp  rann_fingerprint_radial.cpp  rann_fingerprint_radialscreened.cpp  rann_fingerprint_radialscreenedspin.cpp  rann_fingerprint_radialscreenedspinn.cpp  rann_fingerprint_radialspin.cpp  rann_fingerprint_temperature.cpp  rann_fingerprint_torsion.cpp
refac_calibration/scripts/: build-calibrate.sh  build-matar.sh  cmake_build_rann.sh  kokkos-install.sh  matar-install.sh  setup-env.sh
refac_calibration/state/: rann_state_eam_ref_b1.h  rann_state_eam_ref_ch4.h  rann_state_eam_ref_fcc.h  rann_state_eam_ref_hcp.h  rann_state_repulse.cpp  rann_state_spin_j.cpp  rann_state_spin_jscreened.h  rann_state_spinbiquadratic.h  rann_state_zbl.cpp  rann_stateequation.h
refac_calibration/state/lib/: rann_state_eam_ref.h  rann_state_eam_ref_b2.h  rann_state_eam_ref_bcc.h  rann_state_eam_ref_dia.h  rann_state_eamscreenedr.h  rann_state_rose.h  rann_state_rosescreened.h  rann_state_spin_j.h
refac_calibration/state/src/: rann_state_covalent.cpp  rann_state_eam_ref.cpp  rann_state_eamscreenedr.cpp  rann_state_eamscreenedsingle.cpp  rann_state_rosescreened.cpp
refac_calibration/utils/lib/: pair_spin_rann.h
(+96 files in other folders)
